Making additional www. hostname optional for websites

--- a/roles/website/defaults/main.yml
+++ b/roles/website/defaults/main.yml
@@ -5,5 +5,6 @@ application_root_directory: "/srv/{{ application_name }}"
 
 # Nginx site config
 application_domain_name: null
+application_domain_name_append_www: true
 root_index: index.html
 try_files: "$uri $uri/ /index.html"
