--- a/playbook.yml
+++ b/playbook.yml
@@ -12,12 +12,15 @@
   become: yes
   tags: deploy
   tasks:
-    - include_role:
+    - name: Deploying BigBro SPA
+      include_role:
         name: website
       vars:
         application_name: bigbro-spa
         application_domain_name: prototype.lab.crazyinventor.net
-    - include_role:
+        application_domain_name_append_www: false
+    - name: Deploying DavidSchneider.info website
+      include_role:
         name: website
       vars:
         application_name: dsinfo
