--- a/roles/website/templates/website.conf
+++ b/roles/website/templates/website.conf
@@ -2,7 +2,7 @@ server {
   listen 80;
   listen [::]:80;
 
-  server_name {{ application_domain_name }} www.{{ application_domain_name }};
+  server_name {{ application_domain_name }}{% if application_domain_name_append_www %} www.{{ application_domain_name }}{% endif %};
 
   location / {
     root {{ application_root_directory }}/current;
