--- a/roles/website/templates/website.conf
+++ b/roles/website/templates/website.conf
@@ -1,8 +1,12 @@
 server {
-  listen 80;
-  listen [::]:80;
+  listen [::]:443 ssl;
+  listen 443 ssl;
+  ssl_certificate /etc/letsencrypt/live/{{ application_domain_name }}/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/{{ application_domain_name }}/privkey.pem;
+  include /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-  server_name {{ application_domain_name }}{% if application_domain_name_append_www %} www.{{ application_domain_name }}{% endif %};
+  server_name {{ application_domain_name }};
 
   location / {
     root {{ application_root_directory }}/current;
