--- a/roles/website/templates/website.conf
+++ b/roles/website/templates/website.conf
@@ -1,4 +1,12 @@
 server {
+    listen 80;
+
+    server_name {{ application_domain_name }};
+
+    return 301 https://$host$request_uri;
+}
+
+server {
   listen [::]:443 ssl;
   listen 443 ssl;
   ssl_certificate /etc/letsencrypt/live/{{ application_domain_name }}/fullchain.pem;
