--- a/roles/cron/tasks/main.yml
+++ b/roles/cron/tasks/main.yml
@@ -1,11 +1,12 @@
 - name: create cron job
   cron:
-    name: "{{ cron_task_id }}"
-    month: "{{ cron_task_month }}"
-    day: "{{ cron_task_day }}"
-    weekday: "{{ cron_task_weekday }}"
-    minute: "{{ cron_task_minute }}"
-    hour: "{{ cron_task_hour }}"
-    user: "{{ cron_task_user }}"
-    job: "{{ cron_task_job }}"
-    state: "{{ cron_task_state }}"
+    name: "{{ item.key }}"
+    month: "{{ item.value.cron_task_month }}"
+    day: "{{ item.value.cron_task_day }}"
+    weekday: "{{ item.value.cron_task_weekday }}"
+    minute: "{{ item.value.cron_task_minute }}"
+    hour: "{{ item.value.cron_task_hour }}"
+    user: "{{ item.value.cron_task_user }}"
+    job: "{{ item.value.cron_task_job }}"
+    state: "{{ item.value.cron_task_state }}"
+  with_dict: "{{ application_cronjobs }}"
