--- a/roles/website/templates/website.conf
+++ b/roles/website/templates/website.conf
@@ -14,21 +14,33 @@ server {
   include /etc/letsencrypt/options-ssl-nginx.conf;
   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-  server_name {{ application_domain_name }};
-  root {{ application_root_directory }}/current/public;
-  index index index.html index.htm index.php;
+  server_name {{ website_domain_name }}{% if website_domain_name_enable_www == true %} www.{{ website_domain_name }}{% endif %};
+  root {{ website_root_directory }};
 
-  location / {
-    try_files $uri $uri/ /index.php?$query_string;
-  }
+{% if application_enable_php is defined %}
+{% if application_enable_php==true %}
+  index index.html index.htm index.php;
 
   location ~ \.php$ {
     include snippets/fastcgi-php.conf;
-    fastcgi_pass unix:/run/php/php7.2-fpm.sock;
+    fastcgi_pass unix:/run/php/php7.2-fpm.{{ application_name }}.sock;
+  }
+{% endif %}
+{% else %}
+  index index.html index.htm;
+{% endif %}
+
+  location / {
+    try_files {{ website_try_files }};
   }
 
   location = /favicon.ico { access_log off; log_not_found off; }
   location = /robots.txt  { access_log off; log_not_found off; }
+
+  location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+    expires max;
+    log_not_found off;
+  }
 
   location ~ /\.(?!well-known).* {
     deny all;
